--- a/gb/25/7/6/n14545754.md
+++ b/gb/25/7/6/n14545754.md
@@ -48,7 +48,7 @@
 <li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
 <li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/16/n9964704.md#1" target="_blank">刘晓：正统婚礼有深意 中共扭曲藏祸心</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/12/n11717665.md#1" target="_blank">国际人权日 美多位议员谴责中共迫害法轮功</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/17/n10310732.md#1" target="_blank">共产暴政录：台湾土改与大陆土改的对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/7/22/n3922934.md#1" target="_blank">佚名：乱世中原谁最美？</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
